--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
         <meta property="og:image" content="http://ivanlihachev.ru/img/face.png">
         <meta property="og:image:type" content="image/png">
-        <title>Иван Лихачев. Создание лендингов</title>
+        <title>Иван Лихачев. Сделаю лендинг, одностраничник, сайт-визитку или&nbspпосадочную страницу</title>
         <link href="css/reset.css" rel="stylesheet" type="text/css">
         <link href="css/style.css" rel="stylesheet" type="text/css">
         <link href="css/likely.css" rel="stylesheet" type="text/css">
