--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=0.85">
         <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-        <meta property="og:image" content="http://ivanlihachev.ru/img/face.png">
+        <meta property="og:image" content="http://zaverstal.ru/img/face.png">
         <meta property="og:image:type" content="image/png">
         <title>Иван Лихачев. Сделаю лендинг, одностраничник, сайт-визитку или&nbspпосадочную страницу</title>
         <link href="css/reset.css" rel="stylesheet" type="text/css">
