--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="footer__contact"><a class="link" href="https://vk.com/lihachev_ivan">vk.com/lihachev_ivan</a></div>
         <div class="footer__contact"><a class="phone" href="tel:79068991681">+7 906 899-16-81</a></div>
         <div class="social">
-            <div class="likely likely-light likely-big" data-url="http://ivanlihachev.ru" >
+            <div class="likely likely-light likely-big" data-url="http://zaverstal.ru" >
                 <div class="vkontakte">Поделиться</div>
                 <div class="facebook">Поделиться</div>
                 <div class="twitter">Твитнуть</div>
