--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
 
         <div class="grid">
 
+            <a href="http://muzbay.ru" class="item emerge" data-effect="slide" data-hold="100"  >
+                <img class="item__image" src="img/projects/muzbay.png" alt="">
+                <p class="item__title"><span class="link">Muzbay. Педалборды и гитарные ремни</span></p>
+                <p class="item__do">Ведение проекта</p>
+                <p class="item__do">Дизайн</p>
+                <p class="item__do">Верстка</p>
+            </a>
+
             <a href="http://tatyanalihacheva.ru" class="item emerge" data-effect="slide" data-hold="100"  >
                 <img class="item__image item__image_round" src="img/projects/tlihacheva.png" alt="">
                 <p class="item__title"><span class="link">Сайт-портфолио Татьяны Лихачевой</span></p>
