--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <p class="item__do">Верстка</p>
             </a>
 
-            <a href="http://tatyanalihacheva.ru" class="item emerge" data-effect="slide" data-hold="100"  >
+            <!-- <a href="http://tatyanalihacheva.ru" class="item emerge" data-effect="slide" data-hold="100"  >
                 <img class="item__image item__image_round" src="img/projects/tlihacheva.png" alt="">
                 <p class="item__title"><span class="link">Сайт-портфолио Татьяны Лихачевой</span></p>
                 <p class="item__do">Ведение проекта</p>
                 <p class="item__do">Дизайн</p>
                 <p class="item__do">Верстка</p>
-            </a>
+            </a> -->
 
 
             <a href="https://tyugaev.github.io/number-divider/" class="item emerge" data-effect="slide" data-hold="100"  >
