--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 <p>Живу в&nbspМагнитогорске.</p>
             </div>
         </header>
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12"></div>
+            </div>
+        </div>
           
         
         <div class="title">
@@ -35,6 +41,14 @@
         </div>
 
         <div class="grid">
+
+            <a href="http://avtoteam74.ru" class="item emerge" data-effect="slide" data-hold="100"  >
+                <img class="item__image" src="img/projects/avtoteam74.png" alt="">
+                <p class="item__title"><span class="link">Avtoteam74.ru. Лендинг для компании, занимающейся автоподбором в Челябинске</span></p>
+                <p class="item__do">Ведение проекта</p>
+                <p class="item__do">Дизайн</p>
+                <p class="item__do">Верстка</p>
+            </a>
 
             <a href="http://muzbay.ru" class="item emerge" data-effect="slide" data-hold="100"  >
                 <img class="item__image" src="img/projects/muzbay.png" alt="">
