--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="grid">
 
             <a href="http://avtoteam74.ru" class="item emerge" data-effect="slide" data-hold="100"  >
-                <img class="item__image item__image_round" src="img/projects/avtoteam74site.jpg" alt="">
+                <img class="item__image item__image_round" src="img/projects/avtoteam74.jpg" alt="">
                 <p class="item__title"><span class="link">Лендинг компании AvtoTeam74</span></p>
                 <p class="item__do">Ведение проекта</p>
                 <p class="item__do">Дизайн</p>
@@ -47,7 +47,7 @@
             </a>
 
             <a href="http://muzbay.ru" class="item emerge" data-effect="slide" data-hold="100"  >
-                <img class="item__image item__image_round" src="img/projects/muzbaysite.jpg" alt="">
+                <img class="item__image item__image_round" src="img/projects/muzbay.jpg" alt="">
                 <p class="item__title"><span class="link">Muzbay. Педалборды и гитарные ремни</span></p>
                 <p class="item__do">Ведение проекта</p>
                 <p class="item__do">Дизайн</p>
