--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
           <div class="col-lg-8">
             <div class="header__title">
               <h1>Создание сайтов и&nbspлендингов</h1>
-              <p>Помогу показать и&nbspпродвинуть продукт или&nbspуслугу.</p>
+              <p class="header__title__text">Помогу показать и&nbspпродвинуть продукт или&nbspуслугу</p>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="header__myself myself">
               <div class="row">
-                <div class="col-xl-3 col-lg-4 col-md-2 col-sm-3 col-4"><img src="img/face.png" alt="Иван Лихачев" class="myself__face"></div>
-                <div class="col-xl-9 col-lg-8 col-md-10 col-sm-9 col-8">
-                  <p class="myself__name">Иван Лихачев</p>
-                  <p class="myself__description text_sm">Работаю дизайнером с&nbsp2010&nbspгода. Живу в&nbspМагнитогорске</p>
+                <div class="col-xl-4 col-lg-4 col-md-2 col-sm-3 col-4"><img src="img/face.jpg" alt="Иван Лихачев" class="myself__face"></div>
+                <div class="col-xl-8 col-lg-8 col-md-10 col-sm-9 col-8">
+                  <div class="myself__info">
+                    <div class="myself__name">Иван Лихачев</div>
+                    <p class="myself__description">Работаю дизайнером с&nbsp2010&nbspгода. Живу в&nbspМагнитогорске</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -63,93 +65,57 @@
           <div class="grid-sizer col-xl-4 col-md-6"></div>
           <div class="item grid-item col-xl-4 col-md-6 site"><a href="http://avtoteam74.ru"><img src="img/projects/avtoteam74.jpg" alt="" class="item__img"></a>
             <div class="item__name"> <a href="http://avtoteam74.ru" class="link">Лендинг компании AvtoTeam74</a></div>
-            <div class="item__description"> 
-              <p>Ведение проекта, дизайн и&nbspверстка</p>
-            </div>
-            <div class="item__time">Январь 2018</div>
+            <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Январь 2018</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><a href="http://muzbay.ru"><img src="img/projects/muzbay.jpg" alt="" class="item__img"></a>
             <div class="item__name"> <a href="http://muzbay.ru" class="link">Muzbay. Педалборды и гитарные ремни</a></div>
-            <div class="item__description"> 
-              <p>Ведение проекта, дизайн и&nbspверстка</p>
-            </div>
-            <div class="item__time">Декабрь 2017</div>
+            <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Декабрь 2017</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net"><img src="img/projects/hideman_site.jpg" alt="" class="item__img"></a>
             <div class="item__name"> <a href="https://www.hideman.net" class="link">3-я версия сайта Hideman VPN</a></div>
-            <div class="item__description"> 
-              <p>Дизайн и&nbspверстка</p>
-            </div>
-            <div class="item__time">Середина 2017</div>
+            <div class="item__time">Дизайн и&nbspверстка. 2017</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://tyugaev.github.io/number-divider/"><img src="img/projects/number-divider.png" alt="" class="item__img"></a>
             <div class="item__name"> <a href="https://tyugaev.github.io/number-divider/" class="link">number-divider.js</a></div>
             <div class="item__description"> 
-              <p>jQuery плагин, который разбивает числа по формату. Ведение проекта, дизайн и&nbspверстка</p>
+              <p>jQuery плагин, который разбивает числа по формату.</p>
             </div>
-            <div class="item__time">Начало 2017</div>
+            <div class="item__time">Ведение проекта, дизайн и&nbspверстка. 2017</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/pivoprovod.jpg" alt="" class="item__img">
-            <div class="item__name">Пивопровод</div>
-            <div class="item__description"> 
-              <p>Сайт доставки пива. Ведение проекта, дизайн и&nbspверстка</p>
-            </div>
-            <div class="item__time">Середина 2014</div>
+            <div class="item__name">Сайт доставки пива «Пивопровод»</div>
+            <div class="item__time">Ведение проекта, дизайн и&nbspверстка. 2014</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/chrome/"><img src="img/projects/hideman_chrome.png" alt="" class="item__img"></a>
             <div class="item__name"> <a href="https://www.hideman.net/en/docs/download-page/chrome/" class="link">Расширение Hideman VPN для&nbspГугл Хрома</a></div>
-            <div class="item__description"> 
-              <p>Дизайн и&nbspверстка</p>
-            </div>
-            <div class="item__time">Начало 2017</div>
+            <div class="item__time">Дизайн и&nbspверстка. 2017</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/macos/"><img src="img/projects/hideman_mac.png" alt="" class="item__img"></a>
             <div class="item__name"> <a href="https://www.hideman.net/en/docs/download-page/macos/" class="link">Hideman VPN для&nbspmacOS</a></div>
-            <div class="item__description"> 
-              <p>Дизайн</p>
-            </div>
-            <div class="item__time">2016</div>
+            <div class="item__time">Дизайн. 2016</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/ios/"><img src="img/projects/hideman_ios.png" alt="" class="item__img item__img_noround"></a>
             <div class="item__name"> <a href="https://www.hideman.net/en/docs/download-page/ios/" class="link">Hideman VPN для&nbspайфона и&nbspайпада</a></div>
-            <div class="item__description"> 
-              <p>Дизайн</p>
-            </div>
-            <div class="item__time">2016</div>
+            <div class="item__time">Дизайн. 2016</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/android/"><img src="img/projects/hideman_android.png" alt="" class="item__img item__img_noround"></a>
             <div class="item__name"> <a href="https://www.hideman.net/en/docs/download-page/android/" class="link">Hideman VPN для&nbspАндройда</a></div>
-            <div class="item__description"> 
-              <p>Дизайн</p>
-            </div>
-            <div class="item__time">2016</div>
+            <div class="item__time">Дизайн. 2016</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/skycinema.png" alt="" class="item__img item__img_noround">
             <div class="item__name">Сайт кинотеатра Sky-cinema</div>
-            <div class="item__description"> 
-              <p>Ведение проекта, дизайн и&nbspверстка</p>
-            </div>
-            <div class="item__time">2015</div>
+            <div class="item__time">Ведение проекта, дизайн и&nbspверстка. 2015</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/hideman_logo.png" alt="" class="item__img item__img_noround">
             <div class="item__name">Логотип Hideman VPN</div>
-            <div class="item__description"> 
-              <p>Ведение проекта, дизайн и&nbspверстка</p>
-            </div>
             <div class="item__time">2015</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/tarelka.png" alt="" class="item__img item__img_noround">
-            <div class="item__name">Тарелка</div>
-            <div class="item__description"> 
-              <p>Сайт доставки еды. Дизайн и&nbspверстка</p>
-            </div>
-            <div class="item__time">2015</div>
+            <div class="item__name">Сайт доставки еды «Тарелка»</div>
+            <div class="item__time">Дизайн и&nbspверстка. 2015</div>
           </div>
           <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/dinix_logo.png" alt="" class="item__img item__img_noround">
-            <div class="item__name">Тарелка</div>
-            <div class="item__description"> 
-              <p>Логотип веб-студии Dinix</p>
-            </div>
+            <div class="item__name">Логотип веб-студии Dinix</div>
             <div class="item__time">2013</div>
           </div>
         </div>
@@ -159,17 +125,19 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-12">
-            <div class="footer__contact">Почта: <a href="mailto:design@dinix.ru" class="link_noborder">design@dinix.ru</a></div>
-            <div class="footer__contact"><a href="https://vk.com/lihachev_ivan" class="link">vk.com/lihachev_ivan</a></div>
             <div class="footer__contact"><a href="tel:79068991681" class="link_noborder">+7 906 899-16-81</a></div>
+            <div class="footer__contact"><a href="https://vk.com/lihachev_ivan" class="link">vk.com/lihachev_ivan</a></div>
+            <div class="footer__contact">почта: <a href="mailto:design@dinix.ru" class="link_noborder">design@dinix.ru</a></div>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-10">
-            <div data-url="http://zaverstal.ru" class="likely likely-light likely-big">
-              <div class="vkontakte">Поделиться</div>
-              <div class="facebook">Поделиться</div>
-              <div class="twitter">Твитнуть</div>
+            <div class="footer__likely">
+              <div data-url="http://zaverstal.ru" class="likely likely-light likely-big">
+                <div class="vkontakte">Поделиться</div>
+                <div class="facebook">Поделиться</div>
+                <div class="twitter">Твитнуть</div>
+              </div>
             </div>
           </div>
           <div class="col-lg-2"> 
