--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
           <div class="col-lg-4">
             <div class="header__myself myself">
               <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-2 col-sm-3 col-4"><img src="img/face.jpg" alt="Иван Лихачев" class="myself__face"></div>
+                <div class="col-xl-4 col-lg-4 col-md-2 col-sm-3 col-4">
+                  <div class="myself__img"><img src="img/face.jpg" alt="Иван Лихачев" class="myself__face"></div>
+                </div>
                 <div class="col-xl-8 col-lg-8 col-md-10 col-sm-9 col-8">
                   <div class="myself__info">
                     <div class="myself__name">Иван Лихачев</div>
