--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html, charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Иван Лихачев. Создание сайтов и лендингов</title>
-    <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
     <link href="css/reset.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.grid.css" rel="stylesheet" type="text/css">
