--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="header__title">
-              <h1>Создание сайтов и&nbspлендингов</h1>
-              <p class="header__title__text">Помогу показать и&nbspпродвинуть продукт или&nbspуслугу</p>
+              <h1>Создание лендингов под&nbspключ</h1>
+              <p class="header__title__text">С бесплатным, пожизненным хостингом</p>
             </div>
           </div>
           <div class="col-lg-4">
