--- a/index.html
+++ b/index.html
@@ -148,12 +148,7 @@
           </div>
         </div>
       </div>
-    </div>
-    <script>
-      $(document).ready(function() {
-      	$('.class').addClass('.class__active')
-      });
-    </script><!-- Global site tag (gtag.js) - Google Analytics -->
+    </div><!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113009777-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
