--- a/index.html
+++ b/index.html
@@ -11,25 +11,19 @@
     <link href="css/bootstrap.grid.css" rel="stylesheet" type="text/css">
     <link href="plugins/fotorama/fotorama.css" rel="stylesheet" type="text/css">
     <link href="plugins/likely/likely.css" rel="stylesheet" type="text/css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://masonry.desandro.com/masonry.pkgd.js"></script>
-    <script src="js/js.js"></script>
-    <script src="plugins/imagesloaded/imagesloaded.js"></script>
-    <script src="plugins/fotorama/fotorama.js"></script>
-    <script src="plugins/likely/likely.js"></script>
   </head>
   <body>
     <div class="header section_header">
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-8">
-            <div class="header__title">
+            <div class="header__title emerge">
               <h1>Создание лендингов под&nbspключ</h1>
               <p class="header__title__text">С бесплатным, пожизненным хостингом</p>
             </div>
           </div>
           <div class="col-lg-4">
-            <div class="header__myself myself">
+            <div class="header__myself myself emerge">
               <div class="row">
                 <div class="col-xl-4 col-lg-4 col-md-2 col-sm-3 col-4">
                   <div class="myself__img"><img src="img/face.jpg" alt="Иван Лихачев" class="myself__face"></div>
@@ -65,58 +59,58 @@
       <div class="container-fluid">
         <div class="row grid">
           <div class="grid-sizer col-xl-4 col-md-6"></div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><a href="http://avtoteam74.ru"><img src="img/projects/avtoteam74.jpg" alt="" class="item__img"></a>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://avtoteam74.ru"><img src="img/projects/avtoteam74.jpg" alt="" class="item__img"></a>
             <div class="item__name"> <a href="http://avtoteam74.ru" class="link">Лендинг компании AvtoTeam74</a></div>
             <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Январь 2018</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><a href="http://muzbay.ru"><img src="img/projects/muzbay.jpg" alt="" class="item__img"></a>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://muzbay.ru"><img src="img/projects/muzbay.jpg" alt="" class="item__img"></a>
             <div class="item__name"> <a href="http://muzbay.ru" class="link">Muzbay. Педалборды и гитарные ремни</a></div>
             <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Декабрь 2017</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net"><img src="img/projects/hideman_site.jpg" alt="" class="item__img"></a>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="https://www.hideman.net"><img src="img/projects/hideman_site.jpg" alt="" class="item__img"></a>
             <div class="item__name"> <a href="https://www.hideman.net" class="link">3-я версия сайта Hideman VPN</a></div>
             <div class="item__time">Дизайн и&nbspверстка. 2017</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://tyugaev.github.io/number-divider/"><img src="img/projects/number-divider.png" alt="" class="item__img"></a>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="https://tyugaev.github.io/number-divider/"><img src="img/projects/number-divider.png" alt="" class="item__img"></a>
             <div class="item__name"> <a href="https://tyugaev.github.io/number-divider/" class="link">number-divider.js</a></div>
             <div class="item__description"> 
               <p>jQuery плагин, который разбивает числа по формату.</p>
             </div>
             <div class="item__time">Ведение проекта, дизайн и&nbspверстка. 2017</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/pivoprovod.jpg" alt="" class="item__img">
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><img src="img/projects/pivoprovod.jpg" alt="" class="item__img">
             <div class="item__name">Сайт доставки пива «Пивопровод»</div>
             <div class="item__time">Ведение проекта, дизайн и&nbspверстка. 2014</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/chrome/"><img src="img/projects/hideman_chrome.png" alt="" class="item__img"></a>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/chrome/"><img src="img/projects/hideman_chrome.png" alt="" class="item__img"></a>
             <div class="item__name"> <a href="https://www.hideman.net/en/docs/download-page/chrome/" class="link">Расширение Hideman VPN для&nbspГугл Хрома</a></div>
             <div class="item__time">Дизайн и&nbspверстка. 2017</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/macos/"><img src="img/projects/hideman_mac.png" alt="" class="item__img"></a>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/macos/"><img src="img/projects/hideman_mac.png" alt="" class="item__img"></a>
             <div class="item__name"> <a href="https://www.hideman.net/en/docs/download-page/macos/" class="link">Hideman VPN для&nbspmacOS</a></div>
             <div class="item__time">Дизайн. 2016</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/ios/"><img src="img/projects/hideman_ios.png" alt="" class="item__img item__img_noround"></a>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/ios/"><img src="img/projects/hideman_ios.png" alt="" class="item__img item__img_noround"></a>
             <div class="item__name"> <a href="https://www.hideman.net/en/docs/download-page/ios/" class="link">Hideman VPN для&nbspайфона и&nbspайпада</a></div>
             <div class="item__time">Дизайн. 2016</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/android/"><img src="img/projects/hideman_android.png" alt="" class="item__img item__img_noround"></a>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="https://www.hideman.net/en/docs/download-page/android/"><img src="img/projects/hideman_android.png" alt="" class="item__img item__img_noround"></a>
             <div class="item__name"> <a href="https://www.hideman.net/en/docs/download-page/android/" class="link">Hideman VPN для&nbspАндройда</a></div>
             <div class="item__time">Дизайн. 2016</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/skycinema.png" alt="" class="item__img item__img_noround">
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><img src="img/projects/skycinema.png" alt="" class="item__img item__img_noround">
             <div class="item__name">Сайт кинотеатра Sky-cinema</div>
             <div class="item__time">Ведение проекта, дизайн и&nbspверстка. 2015</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/hideman_logo.png" alt="" class="item__img item__img_noround">
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><img src="img/projects/hideman_logo.png" alt="" class="item__img item__img_noround">
             <div class="item__name">Логотип Hideman VPN</div>
             <div class="item__time">2015</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/tarelka.png" alt="" class="item__img item__img_noround">
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><img src="img/projects/tarelka.png" alt="" class="item__img item__img_noround">
             <div class="item__name">Сайт доставки еды «Тарелка»</div>
             <div class="item__time">Дизайн и&nbspверстка. 2015</div>
           </div>
-          <div class="item grid-item col-xl-4 col-md-6 site"><img src="img/projects/dinix_logo.png" alt="" class="item__img item__img_noround">
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><img src="img/projects/dinix_logo.png" alt="" class="item__img item__img_noround">
             <div class="item__name">Логотип веб-студии Dinix</div>
             <div class="item__time">2013</div>
           </div>
@@ -156,5 +150,12 @@
 
   gtag('config', 'UA-113029263-1');
 </script><!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter46912353 = new Ya.Metrika({ id:46912353, clickmap:true, trackLinks:true, accurateTrackBounce:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/46912353" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://masonry.desandro.com/masonry.pkgd.js"></script>
+    <script src="js/js.js"></script>
+    <script src="plugins/imagesloaded/imagesloaded.js"></script>
+    <script src="plugins/fotorama/fotorama.js"></script>
+    <script src="plugins/likely/likely.js"></script>
+    <script src="plugins/emerge.js"></script>
   </body>
 </html>
