--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html, charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="img/face.jpg">
     <title>Иван Лихачев. Создание сайтов и лендингов</title>
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
@@ -151,11 +152,11 @@
   gtag('config', 'UA-113029263-1');
 </script><!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter46912353 = new Ya.Metrika({ id:46912353, clickmap:true, trackLinks:true, accurateTrackBounce:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/46912353" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://masonry.desandro.com/masonry.pkgd.js"></script>
+    <script src="plugins/emerge.js"></script>
     <script src="js/js.js"></script>
+    <script src="https://masonry.desandro.com/masonry.pkgd.js"></script>
     <script src="plugins/imagesloaded/imagesloaded.js"></script>
     <script src="plugins/fotorama/fotorama.js"></script>
     <script src="plugins/likely/likely.js"></script>
-    <script src="plugins/emerge.js"></script>
   </body>
 </html>
