--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="ru-RU">
   <head>
     <meta http-equiv="Content-Type" content="text/html, charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=0.85">
     <meta property="og:image" content="img/face.jpg">
     <title>Иван Лихачев. Создание сайтов и лендингов</title>
-    <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="img/favicon.ico">
     <link href="css/reset.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.grid.css" rel="stylesheet" type="text/css">
@@ -14,50 +13,57 @@
     <link href="plugins/likely/likely.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="header section_header">
+    <div data-effect="slide" data-down="2cm" class="section-menu menu emerge">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-lg-8">
-            <div class="header__title emerge">
-              <h1>Создание лендингов под&nbspключ</h1>
-              <p class="header__title__text">С бесплатным, пожизненным хостингом</p>
+          <div class="col-md-3">
+            <div class="header__logo"> </div> zaverstal.ru
+          </div>
+          <div class="col-md-9 text-right">
+            <div class="menu__contact"><a href="tel:79068991681" class="link_noborder">+7 906 899-16-81</a></div>
+            <div class="menu__contact"><a href="https://vk.com/lihachev_ivan" class="link">vk.com/lihachev_ivan</a></div>
+            <div class="menu__contact">почта: <a href="mailto:design@dinix.ru" class="link_noborder">design@dinix.ru</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section section-header header d-flex">
+      <div class="container text-left">
+        <div class="row align-items-center">
+          <div class="col-lg-8 order-lg-1 order-2">
+            <div data-effect="slide" data-right="2cm" data-up="0px" class="header__title emerge">
+              <div class="header__hello">Привет! Меня зовут</div>
+              <div class="header__name">Иван Лихачев</div>
+              <div class="header__text">Работаю дизайнером сайтов и&nbspмобильных приложений с&nbsp2010 года. Обучаю HTML верстке. Живу в&nbspМагнитогорске</div>
             </div>
           </div>
-          <div class="col-lg-4">
-            <div class="header__myself myself emerge">
-              <div class="row">
-                <div class="col-xl-4 col-lg-4 col-md-2 col-sm-3 col-4">
-                  <div class="myself__img"><img src="img/face.jpg" alt="Иван Лихачев" class="myself__face"></div>
-                </div>
-                <div class="col-xl-8 col-lg-8 col-md-10 col-sm-9 col-8">
-                  <div class="myself__info">
-                    <div class="myself__name">Иван Лихачев</div>
-                    <p class="myself__description">Работаю дизайнером с&nbsp2010&nbspгода. Живу в&nbspМагнитогорске</p>
-                  </div>
-                </div>
+          <div class="col-lg-4 order-lg-2 order-1"><img data-effect="zoom" data-scale="0.85" src="img/face.jpg" alt="Иван Лихачев" class="emerge header__face myself__face"></div>
+        </div>
+      </div>
+    </div>
+    <div class="section-offer">
+      <div class="offer">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="offer__block"><img src="img/icons/create.svg" alt="" data-effect="slide" data-up="2cm" class="offer__img emerge">
+                <div class="offer__title">Создание сайта или лендинга</div>
+                <p>Создам сайт или лендинг для вашего продукта или услуги</p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="offer__block"><img src="img/icons/html.svg" alt="" data-effect="slide" data-up="2cm" class="offer__img emerge">
+                <div class="offer__title">Научу верстать сайты</div>
+                <p>Базовая или продвинутая html верстка. Удаленно</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="filter">
+    <div class="section section-work work">
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <div class="filter__group">
-              <button data-filter="*" class="filter__button filter__button_checked">Все</button>
-              <button data-filter=".site" class="filter__button">Сайты</button>
-              <button data-filter=".mobile" class="filter__button">Мобильные приложения</button>
-              <button data-filter=".face" class="filter__button">Интерфейсы</button>
-              <button data-filter=".logo" class="filter__button">Логотипы</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="content">
-      <div class="container-fluid">
+        <div class="title work__title text-center">Портфолио </div>
         <div class="row grid">
           <div class="grid-sizer col-xl-4 col-md-6"></div>
           <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://avtoteam74.ru"><img src="img/projects/avtoteam74.jpg" alt="" class="item__img"></a>
@@ -118,27 +124,31 @@
         </div>
       </div>
     </div>
-    <div class="footer">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="footer__contact"><a href="tel:79068991681" class="link_noborder">+7 906 899-16-81</a></div>
-            <div class="footer__contact"><a href="https://vk.com/lihachev_ivan" class="link">vk.com/lihachev_ivan</a></div>
-            <div class="footer__contact">почта: <a href="mailto:design@dinix.ru" class="link_noborder">design@dinix.ru</a></div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-10">
-            <div class="footer__likely">
-              <div data-url="http://zaverstal.ru" class="likely likely-light likely-big">
-                <div class="vkontakte">Поделиться</div>
-                <div class="facebook">Поделиться</div>
-                <div class="twitter">Твитнуть</div>
+    <div class="section-footer">
+      <div class="footer">
+        <div class="container-fluid text-center">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="footer__contact">
+                <div class="footer__contact__item"><a href="tel:79068991681" class="link_noborder">+7 906 899-16-81</a></div>
+                <div class="footer__contact__item"><a href="https://vk.com/lihachev_ivan" class="link">vk.com/lihachev_ivan</a></div>
+                <div class="footer__contact__item">почта: <a href="mailto:design@dinix.ru" class="link_noborder">design@dinix.ru</a></div>
               </div>
             </div>
           </div>
-          <div class="col-lg-2"> 
-            <div class="footer__copy">&copy; 2016</div>
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="footer__likely">
+                <div data-url="http://zaverstal.ru" class="likely likely-light likely-big">
+                  <div class="vkontakte">Поделиться</div>
+                  <div class="facebook">Поделиться</div>
+                  <div class="twitter">Твитнуть</div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12"> 
+              <div class="footer__copy">&copy; 2016</div>
+            </div>
           </div>
         </div>
       </div>
@@ -150,35 +160,7 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-113029263-1');
-</script><!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-    (function (d, w, c) {
-        (w[c] = w[c] || []).push(function() {
-            try {
-                w.yaCounter46912353 = new Ya.Metrika({
-                    id:46912353,
-                    clickmap:true,
-                    trackLinks:true,
-                    accurateTrackBounce:true,
-                    webvisor:true
-                });
-            } catch(e) { }
-        });
-
-        var n = d.getElementsByTagName("script")[0],
-            s = d.createElement("script"),
-            f = function () { n.parentNode.insertBefore(s, n); };
-        s.type = "text/javascript";
-        s.async = true;
-        s.src = "https://mc.yandex.ru/metrika/watch.js";
-
-        if (w.opera == "[object Opera]") {
-            d.addEventListener("DOMContentLoaded", f, false);
-        } else { f(); }
-    })(document, window, "yandex_metrika_callbacks");
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/46912353" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+</script><!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter46912353 = new Ya.Metrika({ id:46912353, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/46912353" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="plugins/emerge.js"></script>
     <script src="js/js.js"></script>
