--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.grid.css" rel="stylesheet" type="text/css">
     <link href="plugins/fotorama/fotorama.css" rel="stylesheet" type="text/css">
-    <link href="plugins/likely/likely.css" rel="stylesheet" type="text/css">
+    <link href="plugins/likely/likely.css" rel="stylesheet" type="text/css"><style>.emerge { opacity: 0; }</style>
   </head>
   <body>
     <div data-effect="slide" data-down="2cm" class="section-menu menu emerge">
