--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
         <div class="title work__title text-center">Портфолио </div>
         <div class="row grid">
           <div class="grid-sizer col-xl-4 col-md-6"></div>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://glavmaket.ru"><img src="img/projects/glavmaket.jpg" alt="" class="item__img"></a>
+            <div class="item__name"> <a href="http://glavmaket.ru" class="link">Сайт компании ГлавМакет</a></div>
+            <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Февраль 2018</div>
+          </div>
           <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://avtoteam74.ru"><img src="img/projects/avtoteam74.jpg" alt="" class="item__img"></a>
             <div class="item__name"> <a href="http://avtoteam74.ru" class="link">Лендинг компании AvtoTeam74</a></div>
             <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Январь 2018</div>
-          </div>
-          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://muzbay.ru"><img src="img/projects/muzbay.jpg" alt="" class="item__img"></a>
-            <div class="item__name"> <a href="http://muzbay.ru" class="link">Muzbay. Педалборды и гитарные ремни</a></div>
-            <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Декабрь 2017</div>
           </div>
           <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="https://www.hideman.net"><img src="img/projects/hideman_site.jpg" alt="" class="item__img"></a>
             <div class="item__name"> <a href="https://www.hideman.net" class="link">3-я версия сайта Hideman VPN</a></div>
