--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html, charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.85">
     <meta property="og:image" content="img/face.jpg">
-    <title>Иван Лихачев. Создание сайтов и лендингов</title>
+    <title>Иван Лихачев. Создание лендингов и мини-сайтов</title>
     <link rel="icon" type="image/png" href="img/favicon.ico">
     <link href="css/reset.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -21,7 +21,7 @@
           </div>
           <div class="col-md-9 text-right">
             <div class="menu__contact"><a href="tel:79068991681" class="link_noborder">+7 906 899-16-81</a></div>
-            <div class="menu__contact"><a href="https://vk.com/lihachev_ivan" class="link">vk.com/lihachev_ivan</a></div>
+            <div class="menu__contact"><a href="https://vk.com/zaverstal_ru" class="link">Вконтакте</a></div>
             <div class="menu__contact">почта: <a href="mailto:design@dinix.ru" class="link_noborder">design@dinix.ru</a></div>
           </div>
         </div>
@@ -131,7 +131,7 @@
             <div class="col-lg-12">
               <div class="footer__contact">
                 <div class="footer__contact__item"><a href="tel:79068991681" class="link_noborder">+7 906 899-16-81</a></div>
-                <div class="footer__contact__item"><a href="https://vk.com/lihachev_ivan" class="link">vk.com/lihachev_ivan</a></div>
+                <div class="footer__contact__item"><a href="https://vk.com/zaverstal_ru" class="link">Вконтакте</a></div>
                 <div class="footer__contact__item">почта: <a href="mailto:design@dinix.ru" class="link_noborder">design@dinix.ru</a></div>
               </div>
             </div>
