--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         <div class="title work__title text-center">Портфолио </div>
         <div class="row grid">
           <div class="grid-sizer col-xl-4 col-md-6"></div>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://muzbay.ru"><img src="img/projects/muzbay.jpg" alt="" class="item__img"></a>
+            <div class="item__name"> <a href="http://muzbay.ru" class="link">Лендинг компании Muzbay</a></div>
+            <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Февраль 2017</div>
+          </div>
           <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://glavmaket.ru"><img src="img/projects/glavmaket.jpg" alt="" class="item__img"></a>
             <div class="item__name"> <a href="http://glavmaket.ru" class="link">Сайт компании ГлавМакет</a></div>
             <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Февраль 2018</div>
