--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="title work__title text-center">Портфолио </div>
         <div class="row grid">
           <div class="grid-sizer col-xl-4 col-md-6"></div>
-          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://artlihacheva.ru"><img src="img/projects/artlihacheva.jpg" alt="" class="item__img"></a>
+          <div class="item grid-item emerge col-xl-4 col-md-6 site"><a href="http://artlihacheva.ru"><img src="img/projects/artlihacheva.png" alt="" class="item__img"></a>
             <div class="item__name"> <a href="http://muzbay.ru" class="link">Магазин Татьяны Лихачевой</a></div>
             <div class="item__time">Ведение проекта, дизайн и&nbspверстка. Октябрь 2018</div>
           </div>
