--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6">
-              <div class="offer__block"><img src="img/icons/create.svg" alt="" data-effect="slide" data-up="2cm" class="offer__img emerge">
-                <div class="offer__title">Создание сайта или лендинга</div>
-                <p>Создам сайт или лендинг для вашего продукта или услуги</p>
+              <div class="offer__block"><img src="img/icons/html.svg" alt="" data-effect="slide" data-up="2cm" class="offer__img emerge">
+                <div class="offer__title">Создание сайта, лендинга или интернет-магазина на Тильде</div>
+                <p>Оплата только за дизайн. Программисту платить не нужно</p>
               </div>
             </div>
             <div class="col-lg-6">
-              <div class="offer__block"><img src="img/icons/html.svg" alt="" data-effect="slide" data-up="2cm" class="offer__img emerge">
-                <div class="offer__title">Научу верстать сайты</div>
-                <p>Базовая или продвинутая html верстка. Удаленно</p>
+              <div class="offer__block"><img src="img/icons/create.svg" alt="" data-effect="slide" data-up="2cm" class="offer__img emerge">
+                <div class="offer__title">Продвижение Яндексе и Гугле</div>
+                <p>Выводим в топ выдачи у поисковиков</p>
               </div>
             </div>
           </div>
