--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           <div class="row">
             <div class="col-lg-6">
               <div class="offer__block"><img src="img/icons/html.svg" alt="" data-effect="slide" data-up="2cm" class="offer__img emerge">
-                <div class="offer__title">Создание сайта, лендинга или интернет-магазина на Тильде</div>
-                <p>Оплата только за дизайн. Программисту платить не нужно</p>
+                <div class="offer__title">Создание сайта, лендинга или&nbspинтернет-магазина</div>
+                <p>Движок на Тильде, поэтому оплата только за дизайн. Программисту платить не нужно</p>
               </div>
             </div>
             <div class="col-lg-6">
